# cancer-soot

./: Cargo.toml  build.rs  sineasing.py
glsl-lib/: colorspace.glsl
src/: easing.rs  main.rs  render.rs  state.rs
src/laz/: env.rs  mod.rs  nodes.rs  types.rs
src/render/: data_render.rs  menu_render.rs  mod.rs
src/render/shaders/: data.frag  data.vert  section.frag
src/shaders/: section.vert
