[package]
name = "cancer-soot"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.5", features = ["derive"]}
pretty_env_logger = "0.4"
futures = "0.3"
log = "0.4"
wgpu = "0.8.0"
winit = "0.24"


[build-dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
glob = "0.3"
shaderc = "0.7"
